# isard

./: .dockerignore  .env  .env.original  .gitignore  .gitlab-ci.yml  .gitmodules  .mockery.yaml  .releaserc.mjs  .releaserc.yml  .travis.yml  AUTHORS  AbstractGuacamoleTunnel.go  CHANGELOG.md  CONTRIBUTING.md  ConfiguredGuacamoleSocket.go  DelegatingGuacamoleTunnel.go  Dockerfile  Dockerfile.engine  FailoverGuacamoleSocket.go  FilteredGuacamoleReader.go  FilteredGuacamoleSocket.go  FilteredGuacamoleWriter.go  GuacamoleClientInformation.go  GuacamoleConfiguration.go  GuacamoleFilter.go  GuacamoleHTTPTunnel.go  GuacamoleHTTPTunnelMap.go  GuacamoleHTTPTunnelServlet.go  GuacamoleInstruction.go  GuacamoleParser.go  GuacamoleReader.go  GuacamoleSocket.go  GuacamoleStatus.go  GuacamoleTunnel.go  GuacamoleWriter.go  InetGuacamoleSocket.go  LICENSE  LICENSES.md  Makefile  README.md  (+93 more)
component/_common/: pyproject.toml
component/_common/isardvdi_apiv4_client/: README.md  openapi-python-client.yml  pyproject.toml
component/_common/isardvdi_authentication_client/: README.md  openapi-python-client.yml  pyproject.toml
component/_common/isardvdi_notifier_client/: README.md  openapi-python-client.yml  pyproject.toml
component/_common/isardvdi_scheduler_client/: README.md  openapi-python-client.yml  pyproject.toml
component/_common/src/: api_exceptions.py  api_logs_users.py  api_rest.py  category.py  configuration.py  (+21 more)
component/apiv4/: pyproject.toml
component/change-handler/: pyproject.toml
component/changefeed/: pyproject.toml
component/core_worker/: pyproject.toml
component/openapi/: pyproject.toml
component/socketio/: pyproject.toml
docker/backupninja/: Dockerfile  backup.sh  backup_report.py  borg_integrity_template.sh  detect_orphaned_session.sh  get_integrity_enabled.py  nfs_mount.sh  nfs_umount.sh  pyproject.toml  run.sh  self_heal.sh  send_backup_report.sh  session_preflight.sh  test_backup_report.py
docker/codegen/: Dockerfile  Dockerfile.dockerignore  changefeed_utils.py  gen.sh  gen_changefeed_asyncapi.py  gen_changefeed_models.js  gen_changefeed_subscribers.py  pyproject.toml
docker/db/: Dockerfile  Dockerfile.stats  pyproject.toml  run.sh
docker/storage/: Dockerfile  Dockerfile.base  init.sh  pyproject.toml  requirements-base.pip3  requirements.pip3  requirements.txt
docker/vpn/: Dockerfile  networking.py  pyproject.toml  requirements.pip3  requirements.txt  resources.md  run.sh  wg0.conf
engine/: .db.py.swp  Makefile  __init__.py  bulk.py  config.py  db.py  debug.yml  domain_xml.py  events_recolector.py  flask_rethink.py  functions.py  go.mod  go.sum  hyp.py  log.py  manager_hypervisors.py  pool_hypervisors.py  pyproject.toml  qcow.py  status.py  threads.py  ui_actions.py  vm.py
engine/api/: __init__.py  evaluate.py
engine/bulks/: bulk_sttop.py
engine/cfg/: cfg.go
engine/controllers/: broom.py  eval_controller.py  events_recolector.py  status.py  ui_actions.py
engine/docker/: Dockerfile  add-hyper-rethink.py  add-hypervisor.sh  add_openssh_for_debug.sh  genrsa.sh  requirements.pip3  requirements.txt  run.sh  supervisord.conf
engine/engine/: activate_private_downloads.py  cat.py  conftest.py  generate_certs.sh  logging.conf  start.py  update_certs.py  update_db.py
engine/env/: env.go
engine/models/: domain_xml.py  hyp.py  manager_hypervisors.py  pool_hypervisors.py
engine/services/: log.py
notifier/: pyproject.toml
notifier/docker/: Dockerfile  requirements.txt
notifier/src/: start.py
notifier/tests/: test_import.py
scheduler/: pyproject.toml
scheduler/docker/: Dockerfile  requirements.pip3  requirements.txt
scheduler/src/: start.py  wsgi.ini  wsgi.py
scheduler/tests/: conftest.py  test_flask_rethink.py  test_import.py  test_misfire_grace.py
sysadm/anonymize-db/: README.md  USAGE.md  pyproject.toml  setup.sh
testing/: TESTING.md  check_isardvdi_works.sh  docker-compose.yml  pyproject.toml  test_deployments.sh  testing.yml
testing/check-isardvdi/: Dockerfile  README.md  check-isardvdi.go  check_isardvdi_works.sh  isard.cow
testing/config/: isardvdi.e2e.cfg.template  update_cfg_for_tests.sh
testing/db/: populate_test_db.py
testing/e2e/: .gitignore  global-setup.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
testing/hypers/: isard-hypervisor1.yml  isard-hypervisor2.yml  isard-hypervisor3.yml  isard-hypervisor4.yml
testing/integration/: README.md  conftest.py  pytest.ini  requirements.txt  test_booking_cancel.py  test_desktop_creation_hardware.py  test_full_system_lifecycle.py  test_legacy_ui_contracts.py  test_media_from_url_lifecycle.py  test_quota_contract.py  test_quota_lifecycle.py  test_registry_download_lifecycle.py  test_websocket_progress.py  wait-for-stack.sh
testing/selenium/: Dockerfile  docker-compose.yml
testing/src/: selenium_remote.py  start.py  test_login_logout.py  test_requirements.py
webapp/: __init__.py  bower_components  pyproject.toml
webapp/auth/: auth.py  authentication.py  authentication.py.bad  exceptions.py  ldap.py  local.py
webapp/config/: isard.conf  ldapauth.py  osinfo.txt  populate.py  upgrade.py  virt_builder_install_selection.py
webapp/docker/: Dockerfile  healthcheck.js  requirements.pip3  requirements.txt  supervisord.conf  test.requirements.txt
webapp/lib/: admin_api.py  api.py  db.py  flask_rethink.py  isardScheduler.py  isardSocketio.py  isardUpdates.py  isardViewer.py  load_config.py  log.py
webapp/models/: category.py  config.py  group.py  role.py  user.py
webapp/static/: isard.css  isard.js
webapp/templates/: base.html  footer.html  header.html  login.html  login_disposables.html  sidebar.html
webapp/tests/: README.md  run.py
webapp/types/: user.py
webapp/views/: AllowedsViews.py  ClassroomViews.py  DesktopViews.py  IsosViews.py  LoginViews.old.py  LoginViews.py  MediaViews.py  ProfileViews.py  PxeViews.py  TemplateViews.py
webapp/webapp/: activate_private_downloads.py  activate_private_updates.sh  package-lock.json  package.json  share_all.py  share_none.py  start.py
webapp/wizard/: WizardLib.py  WizardViews.py
(+5155 files in other folders)
