[project]
name = "isardvdi-workspace"
version = "0.0.0"
description = "IsardVDI monorepo Python workspace"
requires-python = ">=3.13,<3.14"

[tool.uv.workspace]
members = [
  "component/_common",
  "component/apiv4",
  "component/changefeed",
  "component/change-handler",
  "component/socketio",
  "component/openapi",
  "component/core_worker",
  "engine",
  "webapp",
  "notifier",
  "scheduler",
  "docker/hypervisor",
  "docker/vpn",
  "docker/storage",
  "pkg/gen/asyncapi/changefeed",
  "pkg/gen/proto/python",
]

[tool.uv.sources]
isardvdi-common = { workspace = true }
isardvdi-protobuf = { workspace = true }
isardvdi-changefeed-asyncapi = { workspace = true }

[dependency-groups]
dev = [
  "pyright",
  "black==24.3.0",
  "isort==5.13.2",
  "ruff",
]

[tool.uv]
default-groups = ["dev"]
constraint-dependencies = [
  "pytest==8.4.1",
  "pytest-asyncio==1.0.0",
  "pytest-cov==6.2.1",
  "pytest-xdist==3.6.1",
  "httpx==0.28.1",
]

[tool.black]
extend-exclude = '''
(
  .*_pb2.py
  | .*_pb2_grpc.py
  | ^/pkg/gen
  | ^/\.go-mod-cache
)
'''

[tool.isort]
profile = "black"
extend_skip_glob = ["*_.pb2.py", "*_pb2_grpc.py", "pkg/gen/*", ".go-mod-cache/*"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
