[project]
name = "isardvdi-workspace"
version = "0.0.0"
description = "IsardVDI monorepo Python workspace"
requires-python = ">=3.13,<3.14"

[tool.uv.workspace]
members = [
  "component/_common",
  "component/_common/isardvdi_apiv4_client",
  "component/_common/isardvdi_authentication_client",
  "component/_common/isardvdi_notifier_client",
  "component/_common/isardvdi_scheduler_client",
  "component/apiv4",
  "component/changefeed",
  "component/change-handler",
  "component/socketio",
  "component/openapi",
  "engine",
  "webapp",
  "notifier",
  "scheduler",
  "docker/backupninja",
  "docker/codegen",
  "docker/db",
  "docker/hypervisor",
  "docker/vpn",
  "docker/storage",
  "pkg/gen/asyncapi/changefeed",
  "pkg/gen/proto/python",
  "testing",
  "sysadm/anonymize-db",
]

[tool.uv.sources]
isardvdi-common = { workspace = true }
isardvdi-protobuf = { workspace = true }
isardvdi-changefeed-asyncapi = { workspace = true }
isardvdi-apiv4-client = { workspace = true }
isardvdi-authentication-client = { workspace = true }
isardvdi-notifier-client = { workspace = true }
isardvdi-scheduler-client = { workspace = true }

[dependency-groups]
dev = [
  "pyright",
  "black==24.3.0",
  "isort==5.13.2",
  "ruff",
]

[tool.uv]
default-groups = ["dev"]
constraint-dependencies = [
  "pytest==8.4.1",
  "pytest-asyncio==1.0.0",
  "pytest-cov==6.2.1",
  "pytest-xdist==3.6.1",
  "httpx==0.28.1",
]
override-dependencies = [
  "attrs>=23",
]

[tool.black]
# .uv-cache / .bun-cache: CI default cache (.gitlab-ci.yml:62-65) restores
# these into $CI_PROJECT_DIR before .lint-uv-job, so isort/black would
# otherwise scan stray .py files vendored under them.
# isardvdi_*_client/src/isardvdi_*_client: openapi-python-client output,
# gitignored except __init__.py; propagated by gen-protobuf as artifacts
# (.gitlab-ci.yml:230-234) so it lands in the lint workspace too.
extend-exclude = '''
(
  .*_pb2.py
  | .*_pb2_grpc.py
  | ^/pkg/gen
  | ^/\.bun-cache
  | ^/\.go-mod-cache
  | ^/\.uv-cache
  | ^/\.venv
  | /isardvdi_apiv4_client/src/isardvdi_apiv4_client/
  | /isardvdi_authentication_client/src/isardvdi_authentication_client/
  | /isardvdi_notifier_client/src/isardvdi_notifier_client/
  | /isardvdi_scheduler_client/src/isardvdi_scheduler_client/
)
'''

[tool.isort]
profile = "black"
extend_skip_glob = [
  "*_.pb2.py",
  "*_pb2_grpc.py",
  "pkg/gen/*",
  ".bun-cache/*",
  ".go-mod-cache/*",
  ".uv-cache/*",
  ".venv/*",
  "**/isardvdi_apiv4_client/src/isardvdi_apiv4_client/*",
  "**/isardvdi_authentication_client/src/isardvdi_authentication_client/*",
  "**/isardvdi_notifier_client/src/isardvdi_notifier_client/*",
  "**/isardvdi_scheduler_client/src/isardvdi_scheduler_client/*",
]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
