[project]
name = "isardvdi-engine"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "bcrypt==4.2.1",
  "cachetools==5.5.0",
  "flask==3.1.0",
  "humanfriendly==10.0",
  "isardvdi-changefeed-asyncapi",
  "isardvdi-common",
  "libpci==0.2",
  "libvirt-python==12.2.0",
  "lxml==5.3.0",
  "paramiko==3.5.1",
  "pem==23.1.0",
  "pyopenssl==24.3.0",
  "pyjwt==2.10.1",
  "pytz==2025.2",
  "redis==5.2.1",
  "requests==2.32.4",
  "rethinkdb @ git+https://github.com/isard-vdi/rethinkdb-python.git@5d314f8cbdd1942f261ae5743ec99bbdf584bf3e",
  "schema==0.7.4",
  "tabulate==0.9.0",
  "werkzeug==3.1.3",
  "xmltodict==0.12.0",
  "yattag==1.14.0",
]

[dependency-groups]
test = [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.isardvdi.system-deps]
apk-build = ["build-base", "libffi-dev", "libvirt-dev", "musl-dev", "openssl-dev", "pciutils-dev", "pkgconfig"]
apk-runtime = ["curl", "libffi", "libvirt-client", "libvirt-libs", "openssh-client", "openssl", "pciutils", "sshpass"]
