[project]
name = "isardvdi-notifier"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "flask==3.1.0",
    "html-sanitizer==2.6.0",
    "isardvdi-apiv4-client",
    "isardvdi-common",
    "jinja2==3.1.6",
    "pydantic==2.12.0",
    "rq==2.3.2",
    "spectree==2.0.1",
    "waitress==3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notifier"]

[tool.isardvdi.system-deps]
apk-build = ["build-base", "libffi-dev", "musl-dev", "openssl-dev"]
apk-runtime = ["libffi", "openssl", "util-linux"]

[dependency-groups]
test = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
]
