[project]
name = "isardvdi-scheduler"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "apscheduler==3.11.2",
  "flask==3.1.0",
  "flask-socketio==5.6.1",
  "gevent==25.5.1",
  "isardvdi-apiv4-client",
  "isardvdi-common",
  "pyjwt==2.10.1",
  "pytz==2025.2",
  "requests==2.32.4",
  "rethinkdb==2.4.10.post1",
  "werkzeug==3.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scheduler"]

[tool.isardvdi.system-deps]
apk-build = ["build-base", "libffi-dev", "musl-dev", "openssl-dev"]
apk-runtime = ["curl", "libffi", "openssl", "tzdata"]

[dependency-groups]
test = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
]
