[project]
name = "isardvdi-scheduler"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "apscheduler==3.11.2",
  "flask==3.1.0",
  "flask-socketio==5.6.1",
  "gevent==25.5.1",
  "isardvdi-apiv4-client",
  "isardvdi-common",
  "pyjwt==2.13.0",
  "pytz==2025.2",
  "requests==2.32.4",
  "rethinkdb @ https://github.com/isard-vdi/rethinkdb-python/archive/c8e870dcb3ba161189c682c1f20b8d439e381fdd.tar.gz",
  "werkzeug==3.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scheduler"]

[tool.isardvdi.system-deps]
apk-build = ["build-base", "libffi-dev", "musl-dev", "openssl-dev"]
apk-runtime = ["curl", "libffi", "openssl", "tzdata"]

[dependency-groups]
test = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
]
