[project]
name = "isardvdi-testing"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "rethinkdb==2.4.10.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[dependency-groups]
test = [
  "pytest",
  "python-socketio[client]==5.13.0",
  "requests==2.32.4",
  "websocket-client==1.8.0",
]
