[project]
name = "isardvdi-webapp"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "cachetools==5.5.0",
  "flask==3.1.0",
  "flask-login==0.6.3",
  "isardvdi-common",
  "requests==2.32.4",
  "rethinkdb==2.4.10.post1",
  "waitress==3.0.2",
  "werkzeug==3.1.3",
]

[dependency-groups]
test = [
  "pytest",
  "pytest-cov",
  "pytest-mock==3.14.0",
  "pytest-xdist",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webapp"]

[tool.isardvdi.system-deps]
apk-build = ["build-base", "libffi-dev", "libjpeg-turbo-dev", "musl-dev", "openssl-dev", "zlib-dev"]
apk-runtime = ["libffi", "libjpeg-turbo", "openssl", "yarn", "zlib"]
