[project]
name = "isardvdi-common"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "bcrypt==4.2.1",
  "cachetools==5.5.0",
  "dnspython==2.8.0",
  "flask==3.1.0",
  "gevent==25.5.1",
  "hiredis==3.4.0",
  "html-sanitizer==2.6.0",
  "isardvdi-notifier-client",
  "isardvdi-protobuf",
  "isardvdi-scheduler-client",
  "pillow==12.3.0",
  "portion==2.6.1",
  "pydantic==2.12.0",
  "pyjwt==2.13.0",
  "python-json-logger==3.3.0",
  "python-socketio==5.16.2",
  "pytz==2025.2",
  "redis==5.2.1",
  "requests==2.32.4",
  "rethinkdb @ https://github.com/isard-vdi/rethinkdb-python/archive/c8e870dcb3ba161189c682c1f20b8d439e381fdd.tar.gz",
  "rq==2.3.2",
  "simple-colors==0.1.5",
  "specktre==0.3.0",
  "zstandard==0.25.0",
]

[dependency-groups]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-xdist",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/isardvdi_common"]

[tool.isardvdi.system-deps]
apk-build = ["build-base", "libffi-dev", "libjpeg-turbo-dev", "musl-dev", "openssl-dev", "zlib-dev"]
apk-runtime = ["libffi", "libjpeg-turbo", "openssl", "zlib"]
