[project]
name = "isardvdi-change-handler"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "isardvdi-changefeed-asyncapi",
  "isardvdi-common",
  "python-socketio==5.13.0",
  "redis==5.2.1",
  "rethinkdb @ https://github.com/isard-vdi/rethinkdb-python/archive/c8e870dcb3ba161189c682c1f20b8d439e381fdd.tar.gz",
]

[dependency-groups]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-xdist",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/isardvdi_change_handler"]

[tool.isardvdi.system-deps]
apk-build = ["build-base", "libffi-dev", "musl-dev", "openssl-dev"]
apk-runtime = ["libffi", "openssl"]
