[project]
name = "isardvdi-core-worker"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "cachetools==5.5.0",
  "isardvdi-apiv4-client",
  "isardvdi-common",
  "python-socketio==5.13.0",
  "requests==2.32.4",
  "rq==2.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/isardvdi_core_worker"]

[tool.isardvdi.system-deps]
apk-build = ["build-base", "libffi-dev", "musl-dev", "openssl-dev"]
apk-runtime = ["libffi", "openssl"]

[dependency-groups]
test = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
]
