[project]
name = "isardvdi-socketio"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "isardvdi-common",
  "python-socketio==5.13.0",
  "uvicorn==0.34.2",
  "watchfiles==1.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/isardvdi_socketio"]

[tool.isardvdi.system-deps]
apk-build = ["build-base", "libffi-dev", "musl-dev", "openssl-dev"]
apk-runtime = ["libffi", "openssl"]

[dependency-groups]
test = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
]
