[project]
name = "isardvdi-backupninja"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "isardvdi-apiv4-client",
  "isardvdi-common",
  "pyjwt==2.13.0",
  "requests==2.32.4",
  "rethinkdb @ https://github.com/isard-vdi/rethinkdb-python/archive/c8e870dcb3ba161189c682c1f20b8d439e381fdd.tar.gz",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.isardvdi.system-deps]
apk-build = ["build-base", "libffi-dev", "libjpeg-turbo-dev", "musl-dev", "openssl-dev", "zlib-dev"]
apk-runtime = ["bash", "borgbackup", "coreutils", "curl", "envsubst", "flock", "jq", "libffi", "libjpeg-turbo", "nfs-utils", "openssl", "redis", "zlib"]
