[project]
name = "isard-anonymize-db"
version = "0.1.0"
description = "Anonymize a rethinkdb-dump tar.gz from IsardVDI for safe use in development."
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.0",
    "cryptography>=42",
    "Faker>=28",
    "rethinkdb>=2.4",
]

[project.scripts]
anonymize-db = "anonymize_db.cli:main"

[dependency-groups]
test = [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anonymize_db"]
