[project]
name = "isardvdi-apiv4-client"
version = "0.1.0"
description = "Client for the IsardVDI apiv4 HTTP API"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.6,<3",
  "attrs>=23",
  "pyjwt>=2.8,<3",
  "python-dateutil>=2.8,<3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["isardvdi_apiv4_client", "isardvdi_apiv4_client_auth"]
