[project]
name = "isardvdi-apiv4-client"
version = "0.0.0"
description = "Client for the IsardVDI apiv4 HTTP API"
requires-python = ">=3.13,<3.14"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.6,<3",
  "attrs>=23",
  "pyjwt>=2.10,<3",
  "python-dateutil>=2.8,<3",
]

[dependency-groups]
test = [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/isardvdi_apiv4_client", "src/isardvdi_apiv4_client_auth"]
